searchbox and filter functions are working

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    
+    <div class="top-bar">
+      <input id="searchInput" type="text" placeholder="Search episodes..." />
+      <p id="count"></p>
+    </div>
 
+  
+
+    <div id="root"></div>
+    
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
 
