Show select option added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
   <body>
     <div class="top-bar">
-      <!-- Episode dropdown goes first (left) -->
+      <!-- Show dropdown goes first (left) -->
+      <select id="showSelect"></select>
+
+      <!-- Episode dropdown goes next -->
       <select id="episodeSelect"></select>
 
       <!-- Search bar goes next -->
