--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
   <body>
     <div class="top-bar">
+
+           <!-- LEVEL 400: Show select dropdown -->
+<label for="showSelect"></label>
+<select id="showSelect">
+  <option value="" disabled selected>Select a show...</option>
+</select>
+
       <!-- Episode dropdown goes first (left) -->
       <select id="episodeSelect"></select>
 
@@ -30,7 +37,7 @@
 
     <div id="root"></div>
 
-    <!-- Loads YOUR javascript code -->
+    <!-- Loads javascript code -->
     <script src="script.js"></script>
   </body>
 </html>
